[package]
name = "wal-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
lru = "0.12.3"
byteorder = "1.5.0"
crc32fast = "1.4.0"
pool = "0.1.4"
lazy_static = "1.4.0"
rand = "0.9.0-alpha.1"
chrono = "0.4.38"
bytes = "1.6.0"
thiserror = "1.0.61"
